src/objects/Collections_Quality_Check__c.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT_INFORMATION_Did_the_agent_check__c</fullName>
        <inlineHelpText>ACCOUNT INFORMATION: Did the agent check customer details and any relevant previous notes to ensure up to date?</inlineHelpText>
        <label>ACCOUNT INFORMATION: Did the agent check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARRANGEMENT_Set_Correctly__c</fullName>
        <inlineHelpText>ARRANGEMENT: Has the arrangement been set up correctly and is reasonable (amount, confirmation etc..)?</inlineHelpText>
        <label>ARRANGEMENT: Set Correctly ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARREARS_BALANCE_Did_the_agent_inform_th__c</fullName>
        <inlineHelpText>ARREARS BALANCE: Did the agent inform the customer of the amount outstanding?</inlineHelpText>
        <label>ARREARS BALANCE: customer informed ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collections Quality Checks</relationshipLabel>
        <relationshipName>Collections_Quality_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accurate_note_info_regarding_arrangement__c</fullName>
        <inlineHelpText>Are the notes accurate and include sufficient information regarding the agreed arrangement? This should include the first payment date, arrangement end date and exact repayment amount.</inlineHelpText>
        <label>Accurate note/info regarding arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_asked_customer_how_they_could_help__c</fullName>
        <inlineHelpText>Did the agent ask the customer how they could help? (reciprocal opening)</inlineHelpText>
        <label>Agent asked customer how they could help</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_mentioned_calls_are_recorded__c</fullName>
        <inlineHelpText>Did the agent mention that the call was being recorded for quality and monitoring purposes?</inlineHelpText>
        <label>Agent mentioned calls are recorded ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_offered_further_assistance__c</fullName>
        <inlineHelpText>Did the agent offer further assistance at the end of the call ?</inlineHelpText>
        <label>Did agent offer further assistance ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_the_arrangement_notes_accurate__c</fullName>
        <inlineHelpText>Are the notes accurate and include sufficient information regarding the agreed arrangement? This should include first payment date, duration and exact repayment amount after taking in consideration customers financial circumstances and priority debts.</inlineHelpText>
        <label>Are the arrangement notes accurate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrangement_cancelled_or_closed_before__c</fullName>
        <inlineHelpText>Was the arrangement cancelled or closed before collections activity resumed? This should be due to failing to pay in line or the arrangement expired.</inlineHelpText>
        <label>Arrangement cancelled or closed before</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrangements_IVA_s__c</fullName>
        <inlineHelpText>Arrangements &amp; IVA’s – If the customer entered into any form of payment arrangement with us, were they set up (or voted for) correctly and for a reasonable amount?</inlineHelpText>
        <label>Arrangements &amp; IVA’s set up correctly ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrears_Legal_Letters_Was_it_necessary__c</fullName>
        <inlineHelpText>Arrears/Legal Letters – Was it necessary to send these, did they contain the correct attachments and were they sent at the correct time?</inlineHelpText>
        <label>Arrears/Legal Letters – Was it necessary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASE_NOTES_3rd_party_authority_noted__c</fullName>
        <inlineHelpText>CASE NOTES - If we received third party authority, was this noted in the &apos;Key information&apos; section?</inlineHelpText>
        <label>CASE NOTES 3rd party authority noted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASE_NOTES_Accurate_header_in_caps_etc__c</fullName>
        <inlineHelpText>CASE NOTES - Are the notes accurate, header in capitals include sufficient information and spelt correctly?</inlineHelpText>
        <label>CASE NOTES Accurate, header in caps etc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>COLLECTIONS_Letter_2_sent_in_time_frame__c</fullName>
        <inlineHelpText>COLLECTIONS - Was the Collections 2 letter sent within the correct time frame?</inlineHelpText>
        <label>COLLECTIONS Letter 2 sent in time frame?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>COLLECTIONS_Letter_3_sent_if_appropriate__c</fullName>
        <inlineHelpText>COLLECTIONS - Was the Collections 3 letter sent if appropriate?</inlineHelpText>
        <label>COLLECTIONS Letter 3 sent if appropriate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>COLLECTIONS_Was_DCA_email_sent_correctly__c</fullName>
        <inlineHelpText>COLLECTIONS - Was DCA email sent at the right time and before being passed to CRS?</inlineHelpText>
        <label>COLLECTIONS Was DCA email sent correctly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>COLLECTIONS_Was_NOSA_sent_once_2mnth_arr__c</fullName>
        <inlineHelpText>COLLECTIONS - Was a NOSA letter sent once two months in arrears?</inlineHelpText>
        <label>COLLECTIONS Was NOSA sent once 2mnth arr</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>COMPLAINT_handled_correctly__c</fullName>
        <inlineHelpText>COMPLAINT: Where applicable, was an apology provided and has the complaint been dealt with correctly?</inlineHelpText>
        <label>COMPLAINT: handled correctly ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>COMPLIANCE_Was_case_management_Compliant__c</fullName>
        <inlineHelpText>COMPLIANCE: Was the case management compliant?</inlineHelpText>
        <label>COMPLIANCE:Was case management Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CONSEQUENCES_Did_the_agent_advise__c</fullName>
        <description>CONSEQUENCES: Did the agent advise of possible effect to credit file due to missing payments?</description>
        <label>CONSEQUENCES: Did the agent advise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRS_2_month_review_set_after_referred__c</fullName>
        <inlineHelpText>CRS - Was a two month review set after being referred to CRS?</inlineHelpText>
        <label>CRS 2 month review set after referred?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRS_Correct_info_added_to_admin__c</fullName>
        <inlineHelpText>CRS - If the case was referred to CRS, was the correct information added on admin screen?</inlineHelpText>
        <label>CRS Correct info added to admin?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRS_Sent_over_at_the_right_time__c</fullName>
        <inlineHelpText>CRS - If the case was referred to CRS, was it sent over at the right time? (Was the account just over 30 days in arrears and we had had no promises to pay)</inlineHelpText>
        <label>CRS Sent over at the right time?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calls_done_an_appropriate_amount__c</fullName>
        <inlineHelpText>Calls – Were these done an appropriate amount of times and did they ring for an acceptable length of time?</inlineHelpText>
        <label>Calls – done an appropriate amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Collections Quality Checks</relationshipLabel>
        <relationshipName>Collections_Quality_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Changing_Account_Statuses__c</fullName>
        <inlineHelpText>Changing Account Statuses – When changing the status of an account, was this done correctly and in a timely manner?</inlineHelpText>
        <label>Changing Account Statuses correctly ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collections_Agent_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search here for the Collections Agent you are quality checking</inlineHelpText>
        <label>Collections Agent Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Collections_Quality_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collections_status_review_date_set__c</fullName>
        <inlineHelpText>If applicable, was the case moved to &apos;collections&apos; status and review date set?</inlineHelpText>
        <label>Collections status &amp; review date set?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completes_all_tasks_relevant_to_the_emai__c</fullName>
        <inlineHelpText>Completes all tasks relevant to the email (including full notes on the account)</inlineHelpText>
        <label>Completes all tasks relevant to the emai</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirms_accurate_time_frames_to_the_cus__c</fullName>
        <inlineHelpText>Confirms accurate time frames to the customer (where relevant)</inlineHelpText>
        <label>Confirms accurate time frames to the cus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corr_and_Cert_scanned_and_filled__c</fullName>
        <inlineHelpText>Was all correspondence and certificate scanned and filed for reference?</inlineHelpText>
        <label>Corr and Cert scanned and filled?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_arranged_payment_amount_decided__c</fullName>
        <inlineHelpText>Was the correct arranged payment amount decided and stated in notes?</inlineHelpText>
        <label>Correct arranged payment amount decided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_correspondence_sent_back__c</fullName>
        <inlineHelpText>Was the correct correspondence sent back via email or letter and noted on the account? (only exception being Stepchange who we do not respond to)</inlineHelpText>
        <label>Correct correspondence sent back?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_details_provided_to_executor__c</fullName>
        <inlineHelpText>Were the correct and accurate details provided to the executor in writing or phone conversation, including the outstanding balance?</inlineHelpText>
        <label>Correct details provided to executor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_letter_email_sent_after_closure__c</fullName>
        <inlineHelpText>Was the correct letter and email sent after cancellation or closure?</inlineHelpText>
        <label>Correct letter/email sent after closure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMC_3rd_party_authority_updated__c</fullName>
        <inlineHelpText>Was the DMC third party authority updated in the &apos;key information&apos; section?</inlineHelpText>
        <label>DMC 3rd party auth updated in key info?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMC_correspondence_noted_on_admin_page__c</fullName>
        <inlineHelpText>Was the DMC correspondence noted on admin page?</inlineHelpText>
        <label>DMC correspondence noted on admin page?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMC_letter_scanned_and_filed__c</fullName>
        <inlineHelpText>If we received a letter from the DMC, was this scanned and filed in Bad Debt drive? Allow 7 days for correspondence to be scanned and saved</inlineHelpText>
        <label>DMC letter scanned and filed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMCcalcs__c</fullName>
        <formula>IF(ISPICKVAL( DMC_correspondence_noted_on_admin_page__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(  DMC_3rd_party_authority_updated__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     DMC_letter_scanned_and_filed__c   , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Are_the_arrangement_notes_accurate__c    , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Manage_payment_plan_section_updated__c    , &quot;No&quot;),0,1)+
IF(ISPICKVAL(    Moved_to_arrangement_status__c   , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Was_the_review_date_set_accordingly__c    , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Correct_correspondence_sent_back__c    , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     COMPLIANCE_Was_case_management_Compliant__c    , &quot;No&quot;),0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMCcalcs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMCpercent__c</fullName>
        <formula>DMCcalcs__c /8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMCpercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DPA_Necessary_information_confirmed_1st__c</fullName>
        <inlineHelpText>DPA – Whenever we did make contact with someone regarding an account, was the necessary information confirmed first (whether verbally or written) in order for us to discuss in detail?</inlineHelpText>
        <label>DPA -Necessary information confirmed 1st</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Death_certificate_requested__c</fullName>
        <inlineHelpText>Once being noted of deceased borrower was the death certificate requested?</inlineHelpText>
        <label>Death certificate requested?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeceasedCalculation__c</fullName>
        <formula>IF(ISPICKVAL( Death_certificate_requested__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( X3rd_party_info_obtained_and_updated__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Corr_and_Cert_scanned_and_filled__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Correct_details_provided_to_executor__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Was_a_3month_review_put_in_place__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( COMPLIANCE_Was_case_management_Compliant__c  , &quot;No&quot;),0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeceasedCalculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeceasedPercent__c</fullName>
        <formula>DeceasedCalculation__c /5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeceasedPercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DefaultCalculation__c</fullName>
        <description>Calculations for Default scorecard</description>
        <formula>IF(ISPICKVAL(     NOSA_sent_within_6_months__c   , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Was_the_account_over_4_months_in_arrears__c    , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Was_a_written_NOD_sent_t__c   , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Was_Set_to_default_noted_on_the_accoun__c    , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Was_all_correspondence_noted_on_admin__c   , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     correct_letters_and_completed_proxy_form__c    , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Was_the_account_set_to_default_status_a__c    , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     COMPLIANCE_Was_case_management_Compliant__c    , &quot;No&quot;),0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DefaultCalculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultPercent__c</fullName>
        <formula>DefaultCalculation__c /7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DefaultPercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DepartmentReviewCalculation__c</fullName>
        <formula>IF(ISPICKVAL(  Calls_done_an_appropriate_amount__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Emails_Were_these_sent_when_necessary__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Arrears_Legal_Letters_Was_it_necessary__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Financial_difficulties_Correct_process__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Arrangements_IVA_s__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Was_a_fair_acceptable_outcome_reached__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Notes_Created_for_every_action__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Reviewing_Accounts__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Was_all_postal_correspondence_received__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Changing_Account_Statuses__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  DPA_Necessary_information_confirmed_1st__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL(  COMPLAINT_handled_correctly__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( Did_the_agent_avoid_offering_financial_a__c , &quot;No&quot;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DepartmentReviewCalculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeptReviewPercentage__c</fullName>
        <formula>DepartmentReviewCalculation__c/13</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeptReviewPercentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Did_the_agent_address_customer_queries__c</fullName>
        <description>Did the agent address any customer queries and give accurate information?</description>
        <label>Did the agent address customer queries</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_avoid_offering_financial_a__c</fullName>
        <inlineHelpText>Did the agent avoid offering financial advice to the customer?</inlineHelpText>
        <label>Did the agent avoid financial advice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_display_understanding__c</fullName>
        <inlineHelpText>Did the agent display understanding / empathy with the customers situation?</inlineHelpText>
        <label>Did the agent display understanding  ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_make_accurate_and_relevant__c</fullName>
        <inlineHelpText>Did the agent make accurate and relevant notes on the customers account?</inlineHelpText>
        <label>Did the agent make accurate notes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_mention_the_company__c</fullName>
        <inlineHelpText>Did the agent mention the company, department and their name?</inlineHelpText>
        <label>Did the agent mention the company...</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_offer_all_relevant_info__c</fullName>
        <inlineHelpText>Did the agent offer all the relevant information?</inlineHelpText>
        <label>Did the agent offer all relevant info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_pause_the_recording__c</fullName>
        <inlineHelpText>Did the agent pause the call recording when taking card details and un-pause to allow remainder of the call to be recorded.</inlineHelpText>
        <label>Did the agent pause the recording</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_sound_welcoming__c</fullName>
        <inlineHelpText>Did the agent sound welcoming, clear and confident to the customer?</inlineHelpText>
        <label>Did the agent sound welcoming ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailResponseCalculation__c</fullName>
        <formula>IF(ISPICKVAL( Responded_to_the_registered_email__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Polite_Greeting__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Thanks_the_customer_for_his_her_email__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Offers_correct_solution_explanation__c  , &quot;No&quot;),0,4)+
IF(ISPICKVAL( Explains_the_importance_of_certain_actio__c  , &quot;No&quot;),0,5)+
IF(ISPICKVAL( Follows_the_correct_process_for_hardship__c  , &quot;No&quot;),0,4)+
IF(ISPICKVAL( Confirms_accurate_time_frames_to_the_cus__c  , &quot;No&quot;),0,4)+
IF(ISPICKVAL( Completes_all_tasks_relevant_to_the_emai__c  , &quot;No&quot;),0,4)+
IF(ISPICKVAL( Offers_additional_assistance__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Uses_correct_grammar_spelling_phrasing__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Positive_Professional_language__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Rationale_behind_why_we_require_info__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Explain_how_to_do_online_in_future__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Was_the_email_compliant__c  , &quot;No&quot;),0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailResponseCalculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmailResponsePercent__c</fullName>
        <formula>EmailResponseCalculation__c /29</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailResponsePercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Emailed_called_in_line_with_policy__c</fullName>
        <inlineHelpText>If the borrower failed to pay in line with the agreement, were they emailed and called in line with policy?</inlineHelpText>
        <label>Emailed/called in line with policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emails_Were_these_sent_when_necessary__c</fullName>
        <inlineHelpText>Emails – Were these sent when necessary and did they contain the correct information (including attached documents)?</inlineHelpText>
        <label>Emails – Were these sent when necessary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_date__c</fullName>
        <inlineHelpText>The date in which the event being checked occured.</inlineHelpText>
        <label>Event date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Explain_how_to_do_online_in_future__c</fullName>
        <inlineHelpText>Did we explain how to do this online in the future?</inlineHelpText>
        <label>Explain how to do online in future?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explains_the_importance_of_certain_actio__c</fullName>
        <inlineHelpText>Explains the importance of certain actions to the customer.</inlineHelpText>
        <label>Explains the importance of certain actio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINANCIAL_DIFFICULTIES_Email_Letter_sent__c</fullName>
        <inlineHelpText>FINANCIAL DIFFICULTIES - IED email and letter sent to borrower if needed?</inlineHelpText>
        <label>FINANCIAL DIFFICULTIES IED sent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINANCIAL_DIFFICULTIES_On_hold_30days__c</fullName>
        <inlineHelpText>FINANCIAL DIFFICULTIES - Was the account placed on hold for 30 days</inlineHelpText>
        <label>FINANCIAL DIFFICULTIES On hold 30days</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINANCIAL_DIFFICULTIES_Step_Change__c</fullName>
        <inlineHelpText>FINANCIAL DIFFICULTIES - Was borrower made aware of not-for-profit organisations Step Change and/or National Debtline. This should be noted on account</inlineHelpText>
        <label>FINANCIAL DIFFICULTIES - Step Change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINANCIAL_DIFFICULTIES_Was_th__c</fullName>
        <inlineHelpText>HARDSHIP/ FINANCIAL DIFFICULTIES: Was the customer treated fairly?</inlineHelpText>
        <label>Hardship: was customer treated fairly ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINANCIAL_DIFFICULTIES_account_on_hold__c</fullName>
        <inlineHelpText>FINANCIAL DIFFICULTIES - was the account placed on hold for 30 days and IED email and letter sent?</inlineHelpText>
        <label>FINANCIAL DIFFICULTIES - account on hold</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINANCIAL_DIFFICULTIES_imp_key_info_note__c</fullName>
        <inlineHelpText>FINANCIAL DIFFICULTIES - Was the important information note and key information added if necessary?</inlineHelpText>
        <label>FINANCIAL DIFFICULTIES imp/key info note</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINANCIAL_DIFFICULTIES_key_info__c</fullName>
        <inlineHelpText>FINANCIAL DIFFICULTIES- Was the important information noted and key information added if necessary?</inlineHelpText>
        <label>FINANCIAL DIFFICULTIES- key info noted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FURTHER_PROBING_Did_the_agent_ask_suffi__c</fullName>
        <inlineHelpText>FURTHER PROBING: Did the agent ask sufficient questions to understand the customer&apos;s financial situation?</inlineHelpText>
        <label>FURTHER PROBING: Sufficient Questions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FURTHER_PROBING_Priority_bills__c</fullName>
        <inlineHelpText>FURTHER PROBING - Did the agent ask the customer about their priority bills</inlineHelpText>
        <label>FURTHER PROBING Priority bills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
</CustomObject>